--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ install_requires =
     click
     python-dateutil
     six>=1.10
-    sqlalchemy
+    sqlmodel
     urllib3>=1.15
 
 [options.entry_points]
