--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = attr: skeleton.__version__
 description = Python App Skeleton
 long_description = file: README.md
 long_description_content_type = "text/markdown"
+keywords = skeleton
 
 [options]
 zip_safe = False
