--- a/setup.cfg
+++ b/setup.cfg
@@ -10,14 +10,15 @@ keywords = skeleton
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.9
 install_requires =
     certifi
     click
     python-dateutil
-    six>=1.10
+    six
     sqlmodel
-    urllib3>=1.15
+    textual
+    urllib3
 
 [options.entry_points]
 console_scripts =
